--- a/index.html
+++ b/index.html
@@ -3,12 +3,44 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Tessel Haagen</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="icon.jpg">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
+    </style>
   </head>
   <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
-    </main>
+      <main>
+        <div class="header">
+          <div class="header-left">
+            <img src="leaf-5.png" alt="Logo" class="logo">
+            <h1 class="title">Tessel Haagen</h1>
+          </div>
+          <div class="header-right">
+            <div class="menu">
+              <a href="#home">Home</a>
+              <a href="#projects">Projects</a>
+              <a href="#resume">Resume</a>
+            </div>
+          </div>
+        </div>
+        <div class="small_body">
+          <text>
+            Tessel Haagen is a graduate student of the Master <mark>Artificial Intelligence</mark> at Utrecht Univeristy. She is currently working on her thesis at Info Support on <mark>interpretable AutoML</mark> for healthcare. Tessel is besides AI also enthusiastic about logic and art. She is proud to say her first <mark>publication</mark> is published in the journal Computational Linguistics in the Netherlands.
+          </text>
+          <img id="photo" src="photo.jpeg">
+        </div>
+      </main>
+      
+      <img class="leaf" id="leaf2" src="leaf-2.png">
+      <img class="leaf" id="leaf3" src="leaf-3.png">
+      <img class="leaf" id="leaf4" src="leaf-4.png">
+      <img class="leaf" id="leaf1" src="leaf-1.png">
   </body>
 </html>
